// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemTitle should render a heading tag of level 1. 1`] = `
<h1
  className="wordcamp-block__item-title"
  style={Object {}}
>
  Example Title
</h1>
`;

exports[`ItemTitle should render a heading tag with a custom class. 1`] = `
<h3
  className="wordcamp-block__item-title my-test-heading"
  style={Object {}}
>
  Example Title
</h3>
`;

exports[`ItemTitle should render a heading tag with a link, custom class name, heading level, and alignment. 1`] = `
<h1
  className="wordcamp-block__item-title my-test-heading"
  style={
    Object {
      "textAlign": "right",
    }
  }
>
  <a
    href="https://wordpress.org"
    rel="noopener noreferrer"
    target="_blank"
  >
    Example Title
  </a>
</h1>
`;

exports[`ItemTitle should render a heading tag with a link. 1`] = `
<h3
  className="wordcamp-block__item-title"
  style={Object {}}
>
  <a
    href="https://wordpress.org"
    rel="noopener noreferrer"
    target="_blank"
  >
    Example Title
  </a>
</h3>
`;

exports[`ItemTitle should render a heading tag with a set alignment. 1`] = `
<h3
  className="wordcamp-block__item-title"
  style={
    Object {
      "textAlign": "right",
    }
  }
>
  Example Title
</h3>
`;

exports[`ItemTitle should render a heading tag with the default level. 1`] = `
<h3
  className="wordcamp-block__item-title"
  style={Object {}}
>
  Example Title
</h3>
`;
